--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -212,7 +212,7 @@
 
     function loadRepositories() {
 
-        fetch("/loadRepository", {
+        fetch("/loadPublicRepository", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json",
